# HDM

./: .gitignore  README.md  TechReport.md  pyproject.toml
config/arch/: 266m.json  293m-2048te.json  370m.json  404m-2048te.json  505m.json  xut-small-1024-tread.json
config/model/: 505M-rope.yaml  for-test.yaml  xut-qwen3-sm-tread.yaml
config/train/: 505M-rope.toml  for-test.toml  hdm-xut-340M-ft.toml  xut-qwen3-sm-tread-1024px.toml  xut-qwen3-sm-tread-768-ar.toml  xut-qwen3-sm-tread-hires.toml  xut-qwen3-sm-tread.toml
scripts/: ckpt_converter.py  ckpt_pruner.py  inference_diffusers.py  inference_fm.py  make_gallery.py  train.py
src/hdm/: pipeline.py
src/hdm/data/: base.py  kohya.py
src/hdm/modules/: base.py  xut.py
src/xut/: xut.py
src/xut/modules/: axial_rope.py
template/: content_template.py  gallery_template.md
